--- a/ImageVaultGUI/ImageVaultGUI.ui
+++ b/ImageVaultGUI/ImageVaultGUI.ui
@@ -887,6 +887,9 @@
       </property>
       <item>
        <widget class="QRadioButton" name="EncryptRadio">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -911,6 +914,9 @@
       </item>
       <item>
        <widget class="QRadioButton" name="DecryptRadio">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -1196,7 +1202,7 @@
   </action>
   <action name="action_Open">
    <property name="text">
-    <string>&amp;Open</string>
+    <string>&amp;Open...</string>
    </property>
   </action>
   <action name="action_Save">
@@ -1206,7 +1212,7 @@
   </action>
   <action name="action_Save_As">
    <property name="text">
-    <string>&amp;Save As</string>
+    <string>&amp;Save As...</string>
    </property>
   </action>
   <action name="actionExit">
